# ChangeLog for www-servers/spawn-fcgi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-servers/spawn-fcgi/ChangeLog,v 1.14 2009/04/19 12:35:58 ranger Exp $

  19 Apr 2009; Brent Baude <ranger@gentoo.org> spawn-fcgi-1.6.1-r1.ebuild,
  spawn-fcgi-1.6.2.ebuild:
  Marking spawn-fcgi ~ppc64 for bug 264840

*spawn-fcgi-1.6.2 (18 Apr 2009)

  18 Apr 2009; Thilo Bangert <bangert@gentoo.org> +spawn-fcgi-1.6.2.ebuild:
  version bump - add ipv6 support

  15 Apr 2009; Markus Meier <maekke@gentoo.org> spawn-fcgi-1.6.1-r1.ebuild:
  add ~amd64, bug #264840

  13 Apr 2009; Brent Baude <ranger@gentoo.org> ChangeLog:
  Marking spawn-fcgi-1.6.1 ~ppc64 for bug 264840

  12 Apr 2009; Thilo Bangert <bangert@gentoo.org> files/spawn-fcgi.initd:
  add extra warning if FCGI_PROGRAM is not executable - fix lineendings
  (bug #265454)

  12 Apr 2009; Tobias Klausmann <klausman@gentoo.org>
  spawn-fcgi-1.6.1-r1.ebuild:
  Keyworded on alpha, bug #264840

*spawn-fcgi-1.6.1-r1 (11 Apr 2009)

  11 Apr 2009; Thilo Bangert <bangert@gentoo.org> -spawn-fcgi-1.6.1.ebuild,
  +spawn-fcgi-1.6.1-r1.ebuild:
  bump, so everybody gets the latest init.d

  10 Apr 2009; Thilo Bangert <bangert@gentoo.org> files/spawn-fcgi.initd:
  allow arguments to FCGI_PROGRAM

  09 Apr 2009; Thilo Bangert <bangert@gentoo.org> files/spawn-fcgi.initd:
  make multiple environment variables work with stable start-stop-daemon

  09 Apr 2009; Thilo Bangert <bangert@gentoo.org> files/spawn-fcgi.confd,
  files/spawn-fcgi.initd, spawn-fcgi-1.6.1:
  keepdir - fix init script for old baselayout (bug #265454)- some minor
  cleanups

  07 Apr 2009; Thilo Bangert <bangert@gentoo.org> files/spawn-fcgi.initd:
  make sure pidpath is available

  04 Apr 2009; Thilo Bangert <bangert@gentoo.org> files/spawn-fcgi.initd:
  posixify init script - bug #260162

  03 Apr 2009; Thilo Bangert <bangert@gentoo.org> files/spawn-fcgi.confd,
  files/spawn-fcgi.initd: