@@ -2,7 +2,7 @@ AUX spawn-fcgi.confd 2139 RMD160 db0e89fc9602f864cbd21b20b0235d1a4cb48610 SHA1 d
 AUX spawn-fcgi.initd 2966 RMD160 5ef1544717d365f7649d730518b6c2ab53548ff5 SHA1 67cf6ca6231deffc9aa365808431bda09243fae3 SHA256 9650693c1b7fe4a06b0e425732ebf7bcc3e0318be5395c152d20339ad941a213
 DIST spawn-fcgi-1.6.1.tar.bz2 71975 RMD160 d906031b3ce40c4a7d682da8acd556f12e8f3fcb SHA1 e18db1367ac1e186972d02e4d9e67a3a34212fc2 SHA256 81301b74d66b8083f23e9c1e39d42fe71995cdf3d06d3beecf3a81a1782f523c
 DIST spawn-fcgi-1.6.2.tar.bz2 73169 RMD160 7a0986a9254646e7c635c086ef055b0f9a00a458 SHA1 475e9d9bff7ab31c29d082cc214cea66e04da690 SHA256 fd9b790dc7692985fcf552e4b6349b0d6872b822450169719192d7a73f6565c0
-EBUILD spawn-fcgi-1.6.1-r1.ebuild 859 RMD160 2fad5e4b56096d051a42b30293220ab44472987b SHA1 247e3a03a81acbc7868f972cfd5ca884de8a2cac SHA256 f04d511b87aad57065c9590f2754df1205be07e403b59db661f2f40401c64512
-EBUILD spawn-fcgi-1.6.2.ebuild 912 RMD160 0a33e66a9a634736aa1fd25254e6e8330d8e445e SHA1 1d78f7faff229b92f9faab57df0b441c86541c25 SHA256 26f25c0b4a28f76cd9ac5aecee3208ddc589fd7b49eaeb7b5aa5b5b7d2ca4956
-MISC ChangeLog 2279 RMD160 bc1979227d16175aa22d1b2666a91282d7743cfe SHA1 1c9c5a7d8453c6270f5b5d63b1f37a70521c000e SHA256 b3e7e9d4a2600c12cf26a4c7096c1f094c350f393651062dc7bae37e14826ed7
+EBUILD spawn-fcgi-1.6.1-r1.ebuild 864 RMD160 c5a0c12dc3faed0d38c8675dc41e19854d8fca02 SHA1 01b37ab16431f5613ada89c4bed9e9918f2540bf SHA256 20464d5970a0b09bc8d23d1710af64ac31323f24ef13a710935fb93ed967cb08
+EBUILD spawn-fcgi-1.6.2.ebuild 917 RMD160 7a9404191c25204ae9c6b213d05ed1ed08de2439 SHA1 0b139c04df97c5b5a7ea39951d050b4fad7e5091 SHA256 e8decd07d385e1c66f05d4657e7f7873585db413f5ed7c553c3e50ec1845bb1d
+MISC ChangeLog 2424 RMD160 569d43078ebb762fb924d2cfcb07744a1821ecbb SHA1 ccb4ee49c85a5572f852163a7f5bdc50dde73d45 SHA256 4a5730b7a75c584020e216486734254de9d0f0827ce052b770221748a2732988
 MISC metadata.xml 454 RMD160 6d518892201f5edddc6a83e119384f5c57661d42 SHA1 37c722d45f2473c24620d92f5bc2b31e92f6385c SHA256 dad5c3b31bdf5cffbec7a56402ecc46a9ed1db288f9e27302ca3d53da5b0fe0c
